--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,26 @@
 <resources>
-    <string name="app_name">desafio Mblab\'s</string>
+    <string name="app_name">Desafio Mblab\'s</string>
     <string name="email">E-mail</string>
     <string name="password">Senha</string>
     <string name="login_button_text">Entrar</string>
     <string name="does_not_have_account">Ainda não possui uma conta? <b>Registar-se</b></string>
     <string name="welcome_to_app">Encontre ingressos de Eventos para comprar e se divertir . Você pode alterar seu nome de usuário a qualquer momento.</string>
-    <string name="generic_error_edit_text">O campo não pode estar em branco</string>
+    <string name="generic_error_edit_text">O campo %s não pode estar em branco</string>
     <string name="email_error">Email incorreto </string>
     <string name="password_error">Senha incorreta</string>
     <string name="password_error_length">A senha não pode ser menor que 6 caracters</string>
     <string name="unexpected_error">Ops...ocorreu um erro inesperado </string>
-    <string name="confirm_password">confirme sua senha</string>
-    <string name="register_name">nome:</string>
-    <string name="confirm_password_register">confirmar senha:</string>
+    <string name="confirm_password">Confirme sua senha</string>
+    <string name="register_name">Nome:</string>
+    <string name="confirm_password_register">Confirmar senha:</string>
     <string name="register">Registrar-se</string>
     <string name="already_has_account">Ja possui uma conta? <b>Logar.</b></string>
-    <string name="price_event">Preço</string>
-    <string name="register_event_name">nome do evento</string>
-    <string name="description_event">Descrição</string>
+
+    <!--Register screen-->
+    <string name="register_img_message_error">Adicione uma image para continuar</string>
+    <string name="register_price_event">Preço</string>
+    <string name="register_event_name">Nome do evento</string>
+    <string name="register_description_event">Descrição</string>
+    <string name="register_event_button">Registar Evento</string>
+    <string name="register_add_img_event"><u>Adicionar image</u></string>
 </resources>
