--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,26 +1,35 @@
 <resources>
     <string name="app_name">Desafio Mblab\'s</string>
+    <!--Login Screen-->
     <string name="email">E-mail</string>
     <string name="password">Senha</string>
     <string name="login_button_text">Entrar</string>
     <string name="does_not_have_account">Ainda não possui uma conta? <b>Registar-se</b></string>
-    <string name="welcome_to_app">Encontre ingressos de Eventos para comprar e se divertir . Você pode alterar seu nome de usuário a qualquer momento.</string>
+<!--    Message Error App-->
     <string name="generic_error_edit_text">O campo %s não pode estar em branco</string>
     <string name="email_error">Email incorreto </string>
     <string name="password_error">Senha incorreta</string>
     <string name="password_error_length">A senha não pode ser menor que 6 caracters</string>
     <string name="unexpected_error">Ops...ocorreu um erro inesperado </string>
+<!--   Register screen-->
     <string name="confirm_password">Confirme sua senha</string>
     <string name="register_name">Nome:</string>
     <string name="confirm_password_register">Confirmar senha:</string>
     <string name="register">Registrar-se</string>
     <string name="already_has_account">Ja possui uma conta? <b>Logar.</b></string>
-
-    <!--Register screen-->
+    <!--Register Event screen-->
     <string name="register_img_message_error">Adicione uma image para continuar</string>
     <string name="register_price_event">Preço</string>
     <string name="register_event_name">Nome do evento</string>
     <string name="register_description_event">Descrição</string>
     <string name="register_event_button">Registar Evento</string>
     <string name="register_add_img_event"><u>Adicionar image</u></string>
+    <!--Dialog screen-->
+    <string name="price_ingress">Preço:  R$</string>
+    <string name="event_name_ingress">Event name</string>
+    <string name="register_description_event_ingress">Encontre ingressos de Eventos para comprar e se divertir . Você pode alterar seu nome de usuário a qualquer momento.</string>
+    <string name="ticket_quantities">Quantidade de ingressos:</string>
+    <string name="remove_ticket">-</string>
+    <string name="add_ticket">+</string>
+    <string name="btn_buy_ticket">Comprar ingresso</string>
 </resources>
