--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="remove_ticket">-</string>
     <string name="add_ticket">+</string>
     <string name="btn_buy_ticket">Comprar ingresso</string>
+    <string name="btn_register_event_home">Cadastre seu evento </string>
 </resources>
