--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="btn_buy_ticket">Comprar ingresso</string>
     <string name="price_event_ticket">%1$.2f</string>
     <string name="logout">Sair</string>
+    <string name="profile">Perfil</string>
 
 
     <string name="error_generic">Ocorreu um problema, tente novamente.</string>
